# minian

./: pipeline.ipynb  pyproject.toml
docs/ext/: nbsplit.py
docs/source/: conf.py
minian/: __init__.py  cnmf.py  cross_registration.py  initialization.py  install.py  motion_correction.py  preprocessing.py  utilities.py  visualization.py
