[project]
name = "minian"
version = "1.3.0"
description = "MiniAn is an analysis pipeline and visualization tool inspired by both CaImAn and MIN1PIPE package specifically for Miniscope data."
authors = [
    {name = "MiniAn Developers", email = "denisecailab@gmail.com"},
]
dependencies = [
    "bokeh>=1.4.0",
    "cvxpy>=1.1.11",
    "dask>=2021.2.0",
    "datashader>=0.12.1",
    "distributed>=2021.2.0",
    "ecos>=2.0.7",
    "ffmpeg-python>=0.2.0",
    "holoviews>=1.12.7",
    "jinja2>=2.11.3",
    "jupyter",
    "matplotlib",
    "medpy>=0.4.0",
    "natsort",
    "netcdf4",
    "networkx>=2.4",
    "numba>=0.52.0",
    "numpy>=1.20.2",
    "opencv-python>=4.2.0.34",
    "pandas>=1.2.3",
    "panel>=0.8.0",
    "pyfftw>=0.12.0",
    "pymetis>=2020.1",
    "rechunker>=0.3.3",
    "scikit-image>=0.18.1",
    "scikit-learn>=0.22.1",
    "scipy>=1.4.1",
    "scs",
    "simpleitk>=2.0.2",
    "sk-video",
    "sparse>=0.11.2",
    "statsmodels>=0.11.1",
    "tifffile",
    "xarray>=0.17.0",
    "zarr",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL-3.0"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/DeniseCaiLab/minian"
Documentation = "https://minian.readthedocs.io/"

[project.scripts]
minian-install = "minian.install:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.0"
tag_format = "v$version"
changelog_incremental = true
version_files = [
    "minian/__init__.py:__version__",
    "minian/install.py:VERSION"
]

[tool.ruff]
target-version = "py39"
select = ["UP"]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = [
  "minian/test"
]


